--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "6.2.0",
   "private": true,
   "engines": {
-    "node": ">=6.11.1 <7.0"
+    "node": "6.11.2"
   },
   "scripts": {
     "start": "node start.js",
