updated organiser page layout

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@
 .start.pid
 .port.tmp
 public
-#lib/govuk_template.html
-#govuk_modules
+lib/govuk_template.html
+govuk_modules
 node_modules/*
 .tmuxp.*
 **/.idea/*
